Modelling Bookings and Processing Payments Commit

--- a/views/signup.pug
+++ b/views/signup.pug
@@ -2,7 +2,7 @@ extends base
 
 block content
   main.main
-    .login-form
+    .signup-form
       h2.heading-secondary.ma-bt-lg Create your account!
       form.form.form--signup
         .form__group
@@ -18,4 +18,4 @@ block content
           label.form__label(for='passwordConfirm') Confirm Password
           input#passwordConfirm.form__input(type='password', placeholder='••••••••', required, minlength='8')
         .form__group
-          button.btn.btn--green Sign Up
+          button.btn.btn--green Create Account
