--- a/views/base.pug
+++ b/views/base.pug
@@ -23,6 +23,7 @@ html
     //- script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js')
     //- script(src='/js/mapbox.js')
     //- script(src='/js/login.js')
+    script(src='https://js.stripe.com/v3/')
     script(src='/js/bundle.js')
 
 
